# jucey-catch2

./: .clang-format  .gitignore  .pylintrc  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
cmake/: auto-file-formatter.cmake  fetch-catch2.cmake  fetch-juce.cmake
modules/: CMakeLists.txt
modules/jucey_catch2/: jucey_catch2.cpp  jucey_catch2.h
modules/jucey_catch2/message-manager/: jucey_InvokeOnMessageThreadAndWait.cpp  jucey_InvokeOnMessageThreadAndWait.h
modules/jucey_catch2/runner/: jucey_Catch2TestRunner.cpp  jucey_Catch2TestRunner.h
modules/jucey_catch2_with_main/: jucey_catch2_with_main.cpp  jucey_catch2_with_main.h
scripts/: build.py  format.py  install-dependencies.py  utils.py
tests/: CMakeLists.txt
tests/source/: InvokeOnMessageThreadAndWaitTests.cpp
